# FraudGraph-HT

./: .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  redis.py
backend/app/ml/: inference.py  losses.py  model.py  pipeline.py  train.py  visualization.py
backend/app/models/: db.py
backend/tests/: test_inference.py
data/: download.py
docker/: init.sql  nginx.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ui.tsx
frontend/src/pages/: Dashboard.tsx  Explorer.tsx  Monitor.tsx  Predict.tsx
frontend/src/store/: index.ts
frontend/src/utils/: api.ts
scripts/: simulate.py
