[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "duckdb>=1.5.1",
    "fastapi[standard]>=0.135.3",
    "fastparquet>=2026.3.0",
    "hiredis>=3.3.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.24.1",
    "pyarrow>=23.0.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.4.0",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
